...

export enum AnalyticsEventType {
  FieldInit = 'Init',
  CollectInit = 'CollectInit',
  HostnameValidation = 'HostnameValidation',
  BeforeSubmit = 'BeforeSubmit',
  Submit = 'Submit',
  Scan = 'Scan',
  CardLookup = 'CardLookup',
}

export enum AnalyticEventStatus {
  Success = 'Ok',
...
